--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h3 style="text-align: center; color: brown;">For a green world! Act green for our planet</h3>
-    <img src="greenworld.jpeg" width="1920" height="1200" style="display: block; margin-left: auto; margin-right: auto;">
+    <img src="/usr/share/nginx/html/greenworld.jpeg" width="1920" height="1200" style="display: block; margin-left: auto; margin-right: auto;">
 </body>
 </html>
