--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>For a green world</title>
 </head>
 <body>
-    <h3 style="text-align: center; color: brown;">For a green world! Act green for our planet...</h3>
+    <h3 style="text-align: center; color: brown;">For a green world! Act green for our planet</h3>
     <img src="greenworld.jpeg" width="900" height="500" style="display: block; margin-left: auto; margin-right: auto;">
 </body>
 </html>
